# CameraPreviewRecorder

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RecordingPreviewScheduler.cpp  RecordingPreviewScheduler.h  native-lib.cpp
app/src/main/cpp/camera_preview/: mv_recording_preview_controller.cpp
app/src/main/cpp/ffmpeg/3.4.6/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/libcommon/egl_core/: gl_tools.h
app/src/main/cpp/video_encoder/: CMakeLists.txt
app/src/main/cpp/video_encoder/soft_encoder/: video_x264_encoder.cpp  video_x264_encoder.h
app/src/main/java/com/example/camerapreviewrecorder/: CameraPreviewActivity.java  MainActivity.java
app/src/main/java/com/example/camerapreviewrecorder/camera/preview/: CameraConfigInfo.java  CameraParamSettingException.java  RecordingPreviewScheduler.java  RecordingPreviewView.java  VideoCamera.java
app/src/main/java/com/example/camerapreviewrecorder/video/encoder/: MediaCodecSurfaceEncoder.java
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
